--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>JSON to Dart</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/github.css">
 
 </head>
@@ -39,20 +39,6 @@
                 <textarea style="position:fixed;opacity: 0;" id="hidden-dart"></textarea>
             </div>
         </div>
-        <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">Handcrafted by Javier Lecuona</p>
-            <ul class="list-inline">
-                <li class="list-inline-item">
-                    <a href="https://github.com/javiercbk">Github</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="https://github.com/javiercbk/json_to_dart">json_to_dart Code</a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="https://twitter.com/javiercbk">Twitter</a>
-                </li>
-            </ul>
-        </footer>
     </div>
     <script src="js/highlight.min.js"></script>
     <script src="js/ace.js" type="text/javascript" charset="utf-8"></script>
